; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/imx/extr_clk-pfdv2.c_clk_pfdv2_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/imx/extr_clk-pfdv2.c_clk_pfdv2_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_pfdv2 = type { i32, i32 }

@LOCK_TIMEOUT_US = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_pfdv2*)* @clk_pfdv2_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @clk_pfdv2_wait(%struct.clk_pfdv2* %0) #0 {
  %2 = alloca %struct.clk_pfdv2*, align 8
  %3 = alloca i32, align 4
  store %struct.clk_pfdv2* %0, %struct.clk_pfdv2** %2, align 8
  %4 = load %struct.clk_pfdv2*, %struct.clk_pfdv2** %2, align 8
  %5 = getelementptr inbounds %struct.clk_pfdv2, %struct.clk_pfdv2* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.clk_pfdv2*, %struct.clk_pfdv2** %2, align 8
  %10 = getelementptr inbounds %struct.clk_pfdv2, %struct.clk_pfdv2* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = shl i32 1, %11
  %13 = and i32 %8, %12
  %14 = load i32, i32* @LOCK_TIMEOUT_US, align 4
  %15 = call i32 @readl_poll_timeout(i32 %6, i32 %7, i32 %13, i32 0, i32 %14)
  ret i32 %15
}

declare dso_local i32 @readl_poll_timeout(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
